--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -33,6 +34,7 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
     "dotenv-webpack": "^7.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.16",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
